--- a/web/package.json
+++ b/web/package.json
@@ -27,8 +27,8 @@
 		"vite": "^7.2.6"
 	},
 	"dependencies": {
-		"@lucide/svelte": "^0.561.0",
 		"clsx": "^2.1.1",
+		"phosphor-svelte": "^3.0.1",
 		"tailwind-merge": "^3.4.0",
 		"tailwind-variants": "^3.2.2",
 		"tw-animate-css": "^1.4.0"
