--- a/web/package.json
+++ b/web/package.json
@@ -9,20 +9,30 @@
 		"preview": "vite preview",
 		"prepare": "svelte-kit sync || echo ''",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
-		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
+		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
+		"test": "vitest run",
+		"test:watch": "vitest",
+		"test:e2e": "playwright test",
+		"test:e2e:ui": "playwright test --ui"
 	},
 	"devDependencies": {
+		"@playwright/test": "^1.55.0",
 		"@internationalized/date": "^3.10.0",
 		"@sveltejs/adapter-auto": "^7.0.0",
 		"@sveltejs/kit": "^2.49.1",
 		"@sveltejs/vite-plugin-svelte": "^6.2.1",
+		"@testing-library/jest-dom": "^6.9.0",
+		"@testing-library/svelte": "^4.2.0",
+		"@testing-library/user-event": "^14.6.1",
 		"@tailwindcss/vite": "^4.1.18",
 		"autoprefixer": "^10.4.23",
 		"bits-ui": "^2.14.4",
+		"jsdom": "^26.1.0",
 		"postcss": "^8.5.6",
 		"svelte": "^5.45.6",
 		"svelte-check": "^4.3.4",
 		"tailwindcss": "^4.1.18",
+		"vitest": "^3.2.1",
 		"typescript": "^5.9.3",
 		"vite": "^7.2.6"
 	},
