Refine auth/onboarding shell and GitHub setup

--- a/.env.example
+++ b/.env.example
@@ -21,7 +21,21 @@ PORTER_ADDR=:3000
 # AIDER_PATH=/path/to/aider
 # OPENCODE_PATH=/path/to/opencode
 
-# Web App Configuration (for production)
-# These are optional for development
-# VITE_GITHUB_APP_ID=
-# VITE_GITHUB_CLIENT_ID=
+# Web App Configuration
+# GitHub OAuth credentials
+# Get from GitHub App settings -> OAuth App section
+GITHUB_CLIENT_ID=
+GITHUB_CLIENT_SECRET=
+GITHUB_OAUTH_REDIRECT_URI=http://localhost:5173/api/auth/github/callback
+
+# Session signing secret
+# Generate with: openssl rand -hex 32
+SESSION_SECRET=
+
+# Webhook verification secret
+# Set in GitHub App Webhooks -> Secret
+WEBHOOK_SECRET=
+
+# GitHub App install link (used in onboarding)
+# Example: https://github.com/apps/<your-app-name>/installations/new
+PUBLIC_GITHUB_APP_INSTALL_URL=
