Unify webhook dispatch and add callback smoke telemetry

--- a/.env.example
+++ b/.env.example
@@ -39,3 +39,11 @@ WEBHOOK_SECRET=
 # GitHub App install link (used in onboarding)
 # Example: https://github.com/apps/<your-app-name>/installations/new
 PUBLIC_GITHUB_APP_INSTALL_URL=
+
+# Optional: comma-separated GitHub logins allowed to run webhook-triggered
+# production machine launches during rollout.
+PORTER_PRODUCTION_ALLOWLIST=cloudboy-jh
+
+# Optional: file path for persisting pending execution contexts.
+# Defaults to a temp file when unset.
+PORTER_EXECUTION_STORE_PATH=
