--- a/.env.example
+++ b/.env.example
@@ -4,14 +4,8 @@
 # GitHub Token
 # Required for: Cloning private repos, creating PR comments, Gist config storage
 # Get it from: https://github.com/settings/tokens
-# Scopes needed: repo (full access)
+# Scopes needed: repo (full access), gist
 GITHUB_TOKEN=ghp_xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
-
-# GitHub Gist ID (Optional)
-# Required for: Persistent config storage across devices
-# Create a Gist at: https://gist.github.com/new
-# Copy the Gist ID from the URL (e.g., https://gist.github.com/username/ABC123 -> ABC123)
-GITHUB_GIST_ID=
 
 # Desktop Daemon Configuration
 PORTER_ADDR=:3000
