Wire live webhook dispatch with OAuth gist lookup and Cloudflare deploy config

--- a/.env.example
+++ b/.env.example
@@ -30,6 +30,10 @@ SESSION_SECRET=
 # Set in GitHub App Webhooks -> Secret
 WEBHOOK_SECRET=
 
+# GitHub App credentials (required for installation token minting)
+GITHUB_APP_ID=
+GITHUB_APP_PRIVATE_KEY=
+
 # GitHub App install link (used in onboarding)
 # Example: https://github.com/apps/<your-app-name>/installations/new
 PUBLIC_GITHUB_APP_INSTALL_URL=
@@ -41,3 +45,8 @@ PORTER_PRODUCTION_ALLOWLIST=cloudboy-jh
 # Optional: file path for persisting pending execution contexts.
 # Defaults to a temp file when unset.
 PORTER_EXECUTION_STORE_PATH=
+
+# Optional: encryption secret and storage path for persisted OAuth tokens
+# used to read user private gists from webhook context.
+PORTER_OAUTH_TOKEN_SECRET=
+PORTER_OAUTH_TOKEN_STORE_PATH=
