--- a/web/package.json
+++ b/web/package.json
@@ -20,6 +20,7 @@
 		"@internationalized/date": "^3.10.0",
 		"@playwright/test": "^1.55.0",
 		"@sveltejs/adapter-auto": "^7.0.0",
+		"@sveltejs/adapter-cloudflare": "^7.2.1",
 		"@sveltejs/kit": "^2.49.1",
 		"@sveltejs/vite-plugin-svelte": "^6.2.1",
 		"@tailwindcss/vite": "^4.1.18",
