Enable nodejs compat and align worker name for Cloudflare CI

--- a/web/wrangler.toml
+++ b/web/wrangler.toml
@@ -1,6 +1,7 @@
-name = "porter-web"
+name = "porter"
 main = ".svelte-kit/cloudflare/_worker.js"
 compatibility_date = "2026-02-11"
+compatibility_flags = ["nodejs_compat"]
 
 [assets]
 directory = ".svelte-kit/cloudflare"
